# psidataviz-deploy

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  serve.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  data_format_request.md  feature_request.md
apps/backend/: pyproject.toml
apps/backend/src/psidata_backend/: __init__.py  main.py  molecule.py  services.py
apps/backend/tests/: test_api.py  test_molecule.py
apps/frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
apps/frontend/src/: App.tsx  api.ts  compound.ts  metadata.ts  nmr.ts  styles.css  vite-env.d.ts
apps/frontend/src/components/: CompareView.tsx  CompoundViewer.tsx  ConnectGuide.tsx  DataWorkspace.tsx  Diagnostics.tsx  DropZone.tsx  ExportMenu.tsx  FeedbackForm.tsx  Footer.tsx  Header.tsx  Heatmap.tsx  LayoutTabs.tsx  MatrixSliceViewer.tsx  MetadataPanel.tsx  MoleculeViewer.tsx  NMR2DPlot.tsx  NMRPanel.tsx  ProviderIcon.tsx  Resources.tsx  SpectrumPlot.tsx  WaveformPlayer.tsx  ZoomableImage.tsx
apps/psidataviz-dash/: pyproject.toml
apps/psidataviz-dash/src/psidataviz_dash/: __init__.py  __main__.py  cache.py  plotting.py  server.py  services.py
apps/psidataviz-dash/src/psidataviz_dash/pages/: __init__.py  browse.py  home.py  visualize.py
apps/psidataviz-dash/tests/: conftest.py  test_app.py
deploy/: Caddyfile
docs/: README.md  ROADMAP.md  adding-a-reader.md  architecture.md  data-sources.md  deploy.md  design-decisions.md  design-sample-centric-catalog.md
