[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "psidata-backend"
version = "0.2.0"
description = "PsiData API — async FastAPI backend wrapping the psidata library (powers PsiDataViz)"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "psidata",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "python-multipart>=0.0.9",  # required by the /api/upload multipart (drag-and-drop) endpoint
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4", "respx>=0.21"]

[project.scripts]
psidata-api = "psidata_backend.main:main"

[tool.uv.sources]
psidata = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/psidata_backend"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501", "B008"]  # B008: FastAPI uses Body()/Query() as argument defaults
