[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "psidataviz-dash"
version = "0.2.0"
description = "PsiDataViz — interim Dash app for Scientific Data Visualization (Ψ Data Viz)"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "psidata",
    "dash>=2.16",
    "dash-mantine-components>=0.14",
    "plotly>=5.20",
    "nbformat>=5.10",
]

[project.optional-dependencies]
app = ["gunicorn>=21.2"]
dev = ["pytest>=8.0", "ruff>=0.4"]

[project.scripts]
psidataviz = "psidataviz_dash.server:main"

[tool.uv.sources]
psidata = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/psidataviz_dash"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
